# EcoIS

./: BUGS  CMakeLists.txt  IA_Square.cpp  IA_Square.h  Makefile  README  _ilac.cpp  error.h  ia_core.cpp  ia_core.h  ia_input.cpp  ia_input.h  ilac.py  ilacChess.cpp  ilacChess.h  ilacConfig.h.in  ilacLabeler.cpp  ilacLabeler.h  ilacSquare.cpp  ilacSquare.h  imageadjust.cpp  imagelabel.cpp  intrinsics.cfg
include/: error.h  ilacChess.h  ilacImage.h  ilacLabeler.h
pyilac/: __init__.py  ilac.py  markerCreator.py  plotMarkerCreator
src/: _ilac.cpp  ilacChess.cpp  ilacImage.cpp  ilacLabeler.cpp
tests/: idCalc_test.py  intr_test.py  normCalc_test.py  test
